Version 1.5.0

Bugfix
* Handle rename in a consistent manner.

Improvements
* Better darkmode frontpage
* Add help texts to password fields.

Version 1.4.0

Bugfix
* Better clearing of QuickPass

Improvements
* Improved login dialog
    * Alternative ID can now easily be used with disable, remove and enable.
    * Handling disable, enable and remove directly
    * Added help texts and cleaner flow.
* Improved design on multiple activities
    * Language selection
    * Rekey presentation and entering
    * CPS Missing
    * New identity done
* Added icons to improve menu selection
* Adaptive icons for all versions of Android
* Improved CPS flow with simple page when cancelation address missing
* Code clean-up and improved readability.

Version 1.3.0

Improvement
* Main page QR scan can now be used for import.
* Use the same GUI for QR Scan and button clicked on web page.

Bugfixes
* Don't display Identity management on that page.
* Handle rekey event correctly. Send new SUK on login.

Version 1.2.0

Feature
* Polish and Finish translations
* Information popup information for settings.

Bugfix
* Fixes for Disable, Enable and Remove account.
* Fix to handle clearing of previous data.
* Landscape selector now working for URL layout.
* Exclude login activity from history and recent apps.
* Handle empty ask question.
* Fixes for contrast in show rescue code dialog.

Enhancement
* Improved selection of identities.


Version 1.1.0

Feature
* Hindi and Chinese translations
* Application shortcuts

Enhancement
* Improved rename GUI
* Remove share feature with application
* Improved selection of identities.

Bugfix
* Handle long URLs.
* Fix "missing argument" error

Version 1.0.0

Feature
* Added application shortcuts

Enhancements
* Added file import to start activity
* Better contrasting night colors
* Improved domain verification
* Identity Management v2

Bugfix
* Remove login popup after failed password

Version 0.16.2

Feature
* Added chinese

Version 0.16.1

Bug fix