@@ -263,7 +263,6 @@
 <string name="set_quickpass">Aktivera QuickPass</string>
 <string name="set_quickpass_long">Skriv in SQRL lösenord för att aktivera QuickPass</string>
 <string name="identity_required">En identitet måste vara skapad för att använda denna funktion</string>
-<string name="title_enable_quickpass">Aktivera QuickPass</string>
 <string name="idle_timeout_guidance">Så att du inte glömmer ditt SQRL huvud lösenord, har maximum tiden för QuickPass satts till en vecka ( %1$s minuter), efter detta behöver du skriva in huvud lösenordet igen.</string>
 <string name="guidance_heading">Vägledning</string>
 <string name="button_identity_options">Identitets hantering</string>
@@ -295,4 +294,6 @@
 <string name="quickpass">QuickPass</string>
 <string name="helptext_quickpass_login">Vargod ange din korta \"QuickPass\", som består av de första få tecknen av ditt SQRL identitets lösenord.</string>
 <string name="helptext_password_login">Vargod ange det fullständiga SQRL identitets lösenordet som du valt till identiteten.</string>
+<string name="title_enable_quickpass">Aktivera QuickPass</string>
+<string name="default_identity_name">Min identitet</string>
 </resources>
